# Face-Mask-Detection-Using-ML

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
config/: default.json  logging.json
examples/: example_workflow.py
src/: __main__.py  cli.py  config.py  data_utils.py  evaluate.py  infer.py  live_infer.py  logger.py  metrics.py  model.py  train.py  utils.py
tests/: test_metrics.py
