[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-mask-detector"
version = "0.1.0"
description = "Face mask detection using convolutional neural networks"
authors = [{name = "aneessaheba", email = "aneessaheba.guddi@sjsu.edu"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "tensorflow>=2.14.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/aneessaheba/Face-Mask-Detection-Using-ML"
Repository = "https://github.com/aneessaheba/Face-Mask-Detection-Using-ML.git"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
